--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <script src="./script.js"></script>
     <div class="card mb-3">
         <div class="row g-0">
             <div class="col-md-4">
