--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    <style></style>
 </head>
 
 <body>
-    <script src="./script.js"></script>
     <div class="card mb-3">
         <div class="row g-0">
             <div class="col-md-4">
@@ -46,12 +44,12 @@
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
-                            <option value="3">4</option>
-                            <option value="3">5</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
                         </select>
 
                         <button type="submit" class="btn btn-primary">Book now</button>&nbsp;&nbsp;
-                        <button type="button" onclick="window.history.back()" class="btn btn-danger">Cancel</button>
+                        <button type="button" onclick=window.history.back() class="btn btn-danger">Cancel</button>
                     </form>
                 </div>
             </div>
